[BZ #4813]

* login/forkpty.c (forkpty): Close master and slave fds on 
fork failure.  Patch by 
Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz>.
2007-07-20  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4813]
	* login/forkpty.c (forkpty): Close master and slave fds on
	fork failure.  Patch by
	Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz>.